ignore update (exclude ConsolePro plugin)

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,5 @@ LeaderboardsUnityProj/*.pidb.meta
 
 # Unity3D Generated File On Crash Reports
 LeaderboardsUnityProj/sysinfo.txt
+LeaderboardsUnityProj/Assets/ConsolePro.meta
+LeaderboardsUnityProj/Assets/ConsolePro/
